[gd_scene load_steps=6 format=3 uid="uid://d0osb7xjckolu"]

[ext_resource type="Script" uid="uid://brf2ooxedqjk0" path="res://ShmupSandbox/UI/Scripts/stage_clear_screen.gd" id="1_aiuvu"]
[ext_resource type="FontFile" uid="uid://chyk1vw521kif" path="res://ShmupSandbox/Assets/Fonts/Metal Lord.otf" id="1_bdqpk"]
[ext_resource type="FontFile" uid="uid://bqxmc05dmv15h" path="res://ShmupSandbox/Assets/Fonts/PixelCode-ExtraBold.otf" id="2_v7dk5"]

[sub_resource type="CanvasTexture" id="CanvasTexture_v7dk5"]

[sub_resource type="CanvasTexture" id="CanvasTexture_aiuvu"]

[node name="stage_clear_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aiuvu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
self_modulate = Color(0.133333, 0.137255, 0.137255, 0.72549)
layout_mode = 2
texture = SubResource("CanvasTexture_v7dk5")

[node name="vbox_main" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="stage_clear_header" type="Label" parent="MarginContainer/vbox_main"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bdqpk")
theme_override_font_sizes/font_size = 40
text = "STAGE CLEAR!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="separator" type="Control" parent="MarginContainer/vbox_main"]
layout_mode = 2

[node name="hbox_bonuses" type="HBoxContainer" parent="MarginContainer/vbox_main"]
custom_minimum_size = Vector2(330, 184)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="VBox_label_names" type="VBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="hbox_clear_bonus" type="HBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names"]
layout_mode = 2
theme_override_constants/separation = 67

[node name="clear_bonus_label" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_clear_bonus"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "CLEAR BONUS"

[node name="separator" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_clear_bonus"]
visible = false
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_clear_bonus"]
visible = false
layout_mode = 2

[node name="hbox_enemies_bonus" type="HBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="enemies_bonus_label" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_enemies_bonus"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "ENEMY DESTRUCTION BONUS"

[node name="separator" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_enemies_bonus"]
visible = false
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_enemies_bonus"]
visible = false
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_enemies_bonus"]
visible = false
layout_mode = 2

[node name="hbox_lives_bonus" type="HBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="lives_bonus_label" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_lives_bonus"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "LIVES BONUS"

[node name="separator" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_lives_bonus"]
visible = false
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_lives_bonus"]
visible = false
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_lives_bonus"]
visible = false
layout_mode = 2

[node name="hbox_credits_bonus" type="HBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="credits_bonus_label" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_credits_bonus"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "CREDITS BONUS"

[node name="separator" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_credits_bonus"]
visible = false
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_credits_bonus"]
visible = false
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_credits_bonus"]
visible = false
layout_mode = 2

[node name="hbox_bomb_bonus" type="HBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="bomb_bonus_label" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_bomb_bonus"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "BOMBS BONUS"

[node name="separator" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_bomb_bonus"]
visible = false
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_bomb_bonus"]
visible = false
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_bomb_bonus"]
visible = false
layout_mode = 2

[node name="hbox_boss_bonus" type="HBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="boss_bonus_label" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_boss_bonus"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "BOSS BONUS"

[node name="separator" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_boss_bonus"]
visible = false
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_boss_bonus"]
visible = false
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_boss_bonus"]
visible = false
layout_mode = 2

[node name="hbox_catnip_bonus" type="HBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="catnip_bonus_label" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_catnip_bonus"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "CATNIP BONUS"

[node name="separator" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_catnip_bonus"]
visible = false
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_catnip_bonus"]
visible = false
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/vbox_main/hbox_bonuses/VBox_label_names/hbox_catnip_bonus"]
visible = false
layout_mode = 2

[node name="vbox_label_values" type="VBoxContainer" parent="MarginContainer/vbox_main/hbox_bonuses"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="clear_bonus_value" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/vbox_label_values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "10000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="enemy_bonus_value" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/vbox_label_values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "35000"
vertical_alignment = 1

[node name="lives_bonus_value" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/vbox_label_values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "15000"
vertical_alignment = 1

[node name="credits_bonus_value" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/vbox_label_values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "15000"
vertical_alignment = 1

[node name="bomb_bonus_value" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/vbox_label_values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "15000"
vertical_alignment = 1

[node name="boss_bonus_value" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/vbox_label_values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "15000"
vertical_alignment = 1

[node name="catnip_bonus_value" type="Label" parent="MarginContainer/vbox_main/hbox_bonuses/vbox_label_values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "15000"
vertical_alignment = 1

[node name="line_label" type="Label" parent="MarginContainer/vbox_main"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 12
text = "<%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%>"

[node name="hbox_catnip_icons" type="HBoxContainer" parent="MarginContainer/vbox_main"]
custom_minimum_size = Vector2(380, 64)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 28

[node name="separator" type="Control" parent="MarginContainer/vbox_main/hbox_catnip_icons"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/vbox_main/hbox_catnip_icons"]
layout_mode = 2

[node name="catnip_slot_1" type="TextureRect" parent="MarginContainer/vbox_main/hbox_catnip_icons"]
unique_name_in_owner = true
self_modulate = Color(0, 0.545098, 0.129412, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("CanvasTexture_aiuvu")

[node name="catnip_slot_2" type="TextureRect" parent="MarginContainer/vbox_main/hbox_catnip_icons"]
unique_name_in_owner = true
self_modulate = Color(0, 0.545098, 0.129412, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("CanvasTexture_aiuvu")

[node name="catnip_slot_3" type="TextureRect" parent="MarginContainer/vbox_main/hbox_catnip_icons"]
unique_name_in_owner = true
self_modulate = Color(0, 0.545098, 0.129412, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("CanvasTexture_aiuvu")

[node name="catnip_slot_4" type="TextureRect" parent="MarginContainer/vbox_main/hbox_catnip_icons"]
unique_name_in_owner = true
self_modulate = Color(0, 0.545098, 0.129412, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("CanvasTexture_aiuvu")

[node name="catnip_slot_5" type="TextureRect" parent="MarginContainer/vbox_main/hbox_catnip_icons"]
unique_name_in_owner = true
self_modulate = Color(0, 0.545098, 0.129412, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("CanvasTexture_aiuvu")

[node name="catnip_bonus_status" type="Label" parent="MarginContainer/vbox_main"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 14
text = "TOASTY!"
horizontal_alignment = 1

[node name="boss_bonus_status" type="Label" parent="."]
visible = false
layout_mode = 2
offset_left = 704.0
offset_top = 348.0
offset_right = 1003.0
offset_bottom = 368.0
theme_override_fonts/font = ExtResource("2_v7dk5")
theme_override_font_sizes/font_size = 14

[node name="screen_timer" type="Timer" parent="."]
